teste-2.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: teste-infra
---
apiVersion: v1
kind: Pod
metadata:
  name: longhorn-test-pod
  namespace: teste-infra
spec:
  containers:
  - name: web-server
    image: nginx
    volumeMounts:
    - name: my-volume
      mountPath: /usr/share/nginx/html
  volumes:
  - name: my-volume
    persistentVolumeClaim:
      claimName: longhorn-test-pvc
