mqtt.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: feira-de-jogos
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mqtt-broker
  namespace: feira-de-jogos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mqtt-broker
  template:
    metadata:
      labels:
        app: mqtt-broker
    spec:
      containers:
        - name: mqtt-broker
          image: eclipse-mosquitto
          ports:
            - containerPort: 1883
              name: mqtt-tcp
            - containerPort: 8083
              name: mqtt-ws
          volumeMounts:
            - name: config
              mountPath: /mosquitto/config/mosquitto.conf
              subPath: mosquitto.conf
      volumes:
        - name: config
          configMap:
            name: mosquitto-config
---
apiVersion: v1
kind: Service
metadata:
  name: mqtt-broker
  namespace: feira-de-jogos
spec:
  selector:
    app: mqtt-broker
  ports:
    - name: mqtt
      port: 8083
      targetPort: 8083
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: feira-gateway
  namespace: feira-de-jogos
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  gatewayClassName: cilium
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "mqtt.k8s.sj.ifsc.edu.br"
      tls:
        mode: Terminate
        certificateRefs:
          - name: feira-jogos-tls-secret
      allowedRoutes:
        namespaces:
          from: Same
    - name: http
      protocol: HTTP
      port: 80
      hostname: "mqtt.k8s.sj.ifsc.edu.br"
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mqtt-route
  namespace: feira-de-jogos
spec:
  parentRefs:
    - name: feira-gateway
      sectionName: https
  hostnames:
    - "mqtt.k8s.sj.ifsc.edu.br"
  rules:
    - backendRefs:
        - name: mqtt-broker
          port: 8083
