teste-3.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: teste-infra
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-teste
  namespace: teste-infra
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-teste
  template:
    metadata:
      labels:
        app: app-teste
    spec:
      containers:
      - name: web-server
        image: nginx
        volumeMounts:
        - name: my-volume
          mountPath: /usr/share/nginx/html
        ports:
        - containerPort: 80
      volumes:
      - name: my-volume
        persistentVolumeClaim:
          claimName: longhorn-test-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: svc-teste
  namespace: teste-infra
spec:
  type: ClusterIP
  ipFamilyPolicy: PreferDualStack
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: app-teste
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-infra
  namespace: teste-infra
spec:
  gatewayClassName: cilium
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: Same
  - name: https
    protocol: HTTPS
    port: 443
    allowedRoutes:
      namespaces:
        from: Same
    tls:
      mode: Terminate
      certificateRefs:
      - name: teste-infra-tls-secret
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rota-teste-dupla
  namespace: teste-infra
spec:
  parentRefs:
  - name: gateway-infra
    sectionName: http
  - name: gateway-infra
    sectionName: https
  hostnames:
  - "teste-infra.k8s.sj.ifsc.edu.br"
  rules:
  - backendRefs:
    - name: svc-teste
      port: 80
